# tracker-buddy

./: CMakeLists.txt  README.md
Source/: MainComponent.cpp  MainComponent.h
Source/destinations/: Destination.h  OSCSender.h  OSCSenderPlus.h  Values.h  Visualizer.h
Source/tracker/: AddButton.h  Connection.h  ConnectionComponent.h  ConnectionManager.h  IpAndPortComponent.h  MidiDeviceManager.h  Quaternion.h  RemoveButton.h  RotationData.h  TrackerInterface.cpp  TrackerInterface.h  TrackerInterfaceComponent.h
Source/utilities/: MidiDeviceManager.h  MidiDeviceManagerComponent.h  Quaternion.h  TaitBryan.h  TrackerInterface.cpp  TrackerInterface.h  TrackerInterfaceComponent.h
